# braintrust-study

./: CLAUDE.md  README.md  eval_openai.py  main.py  pyproject.toml  wrap_openai.py  wrap_openai_add.py  wrap_openai_stream.py
Datasets/: 1. manage_datasets.py  README.md
Functions/: 1.prompts.py  2.tools.py  README.md
Guides/Traces/: 1.annotating_code.py  2.tracing_custom_llm.py  README.md
Logs/: README.md
Logs/1.write_logs/: 1.write_logs.py  2.user_feedback.py
cookbook/: 1.ai_search_evals.ipynb  2.classifying_news_articles.ipynb
experiments/: README.md
experiments/1.write_evals/: 1-1.eval_basic.py  1-2.scores.py  1-3.unhandled_scores.py  1-4.eval_closed_q_a.py  1-5.hill_climing.py  1-6.custom_reporters.py
experiments/2.run_evals/: 2-1.run_code_directly.py
quickstart/: eval_tutorial.py
