[project]
name = "braintrust-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "autoevals>=0.0.130",
    "braintrust>=0.3.1",
    "chevron>=0.14.0",
    "duckdb>=1.4.1",
    "jupyter>=1.1.1",
    "levenshtein>=0.27.1",
    "openai>=2.2.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.1.1",
]
